--- a/package.json
+++ b/package.json
@@ -7,16 +7,26 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "g": "pnpx shadcn-ui add"
+    "g": "pnpx shadcn-ui add",
+    "type-locales": "i18next-resources-for-ts interface -i ./src/i18n/locales/en -o ./@types/resources.d.ts"
   },
   "dependencies": {
+    "@radix-ui/react-dropdown-menu": "^2.0.6",
+    "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-slot": "^1.0.2",
+    "accept-language": "^3.0.18",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
+    "i18next": "^23.8.2",
+    "i18next-browser-languagedetector": "^7.2.0",
+    "i18next-resources-to-backend": "^1.2.0",
     "lucide-react": "^0.323.0",
     "next": "14.1.0",
+    "next-themes": "^0.2.1",
     "react": "^18",
+    "react-cookie": "^7.0.2",
     "react-dom": "^18",
+    "react-i18next": "^14.0.5",
     "tailwind-merge": "^2.2.1",
     "tailwindcss-animate": "^1.0.7"
   },
@@ -27,6 +37,7 @@
     "autoprefixer": "^10.0.1",
     "eslint": "^8",
     "eslint-config-next": "14.1.0",
+    "i18next-resources-for-ts": "^1.5.0",
     "postcss": "^8",
     "tailwindcss": "^3.3.0",
     "typescript": "^5"
